syntax = "proto3";

package pathfinding;

import "game.proto";

message PathfindingRequest {
  uint32 mapId = 1;
  game.Position start = 2;
  game.Position end = 3;
  bool smoothPath = 4;
}

message PathfindingResponse {
  repeated game.Position path = 1;
}